@@ -1,8 +1,9 @@
-$Id: Changelog.txt,v 1.220 2016/01/22 14:19:54 nanard Exp $
+$Id: Changelog.txt,v 1.221 2016/01/22 15:07:27 nanard Exp $
 miniUPnP client Changelog.
 
 2016/01/22:
   Improve UPNPIGD_IsConnected() to check if WAN address is not private.
+  parse HTTP response status line in miniwget.c
 
 2015/10/26:
   snprintf() overflow check. check overflow in simpleUPnPcommand2()
